scripts/test_outputs/sample27out.txt
./cfiles/sample27.cpp:49:5: error: redefinition of 'a'
int a =  0 ;
    ^
./cfiles/sample27.cpp:48:15: note: previous definition is here
int hello(int a) {
              ^
./cfiles/sample27.cpp:50:21: error: function definition is not allowed here
int hello(double a) {
                    ^
./cfiles/sample27.cpp:56:2: error: expected '}'
}
 ^
./cfiles/sample27.cpp:48:18: note: to match this '{'
int hello(int a) {
                 ^
3 errors generated.
